# vid2txt

./: Cargo.toml  README.md
src/: app.rs  cli.rs  cmd.rs  constants.rs  fs_utils.rs  hf.rs  main.rs  models.rs
