[package]
name = "vid2txt"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
indicatif = "0.18"
sanitize-filename = "0.6"
tempfile = "3"
walkdir = "2"
which = "8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
dirs = "6"

[profile.release]
opt-level = 3      
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = 0
incremental = false
overflow-checks = false